--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.druid.url=jdbc:mysql://49.235.152.73:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.druid.username=root
-spring.datasource.druid.password=root
+spring.datasource.druid.password=Shen112413.
 #¡¨Ω”≥ÿ…Ë÷√
 spring.datasource.druid.initial-size= 5
 spring.datasource.druid.min-idle=5
