--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,2 +1,4 @@
 log4j.rootLogger=off,stdout
-log4j.appender.stdout=org.apache.log4j.C
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
